# wagtail-write-api

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  wagtail-write-api-plan.md  zensical.toml
.github/workflows/: publish.yml
docs/: index.md
docs/api/: authentication.md  images.md  pages.md  schema-discovery.md  snippets.md
docs/development/: contributing.md  example-app.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: mobile-app.md  permissions.md  rich-text.md  streamfield.md  workflow.md
example/: Makefile  manage.py
example/example_project/: settings.py  urls.py  wsgi.py
example/templates/: base.html
example/templates/testapp/: blog_index_page.html  blog_page.html  event_page.html  simple_page.html
example/templates/wagtailcore/: page.html
example/testapp/: models.py
example/testapp/management/commands/: seed_demo.py
example/testapp/migrations/: 0001_initial.py  0002_category_tag_alter_blogpage_body_blogpage_category.py  0003_alter_blogpage_body.py  0004_eventpage_virtual.py
src/wagtail_write_api/: api.py  apps.py  auth.py  models.py  permissions.py  settings.py  urls.py  utils.py  views.py  wagtail_hooks.py
src/wagtail_write_api/converters/: rich_text.py
src/wagtail_write_api/endpoints/: auth.py  images.py  pages.py  schema_discovery.py  snippets.py
src/wagtail_write_api/management/commands/: create_api_token.py
src/wagtail_write_api/migrations/: 0001_initial.py
src/wagtail_write_api/schema/: fields.py  generator.py  registry.py
src/wagtail_write_api/templates/wagtail_write_api/: qr_connect.html
tests/: conftest.py  test_auth.py  test_auth_endpoint.py  test_images_api.py  test_pages_read.py  test_pages_workflow.py  test_pages_write.py  test_rich_text.py  test_rich_text_roundtrip.py  test_schema_generation.py  test_smoke.py  test_snippet_schema.py  test_snippets_api.py  test_streamfield.py
