[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-write-api"
version = "0.4.2"
description = "A read/write REST API for Wagtail CMS"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [{ name = "Tom Dyson", email = "tom@torchbox.com" }]
keywords = ["wagtail", "django", "api", "rest", "cms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "wagtail>=6.0",
    "django-ninja>=1.0",
    "markdown>=3.5",
    "markdownify>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "factory-boy",
    "wagtail-factories",
    "ruff",
    "Pillow",
]

[project.urls]
Homepage = "https://tomdyson.github.io/wagtail-write-api/"
Repository = "https://github.com/tomdyson/wagtail-write-api"
Documentation = "https://tomdyson.github.io/wagtail-write-api/"
Issues = "https://github.com/tomdyson/wagtail-write-api/issues"
Changelog = "https://github.com/tomdyson/wagtail-write-api/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/wagtail_write_api"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings"
pythonpath = ["src", "example"]

[tool.ruff]
line-length = 99

[dependency-groups]
dev = [
    "zensical>=0.0.31",
]
